--- a/blocks/popup/__overlay/popup__overlay.css
+++ b/blocks/popup/__overlay/popup__overlay.css
@@ -16,6 +16,6 @@
 
 @media screen and (max-width: 550px) {
   .popup__overlay {
-    padding: 0 20px 0 20px;
+    padding: 60px 20px 0 20px;
   }
 }
